# airtable-graphql

./: README.md  pyproject.toml
tests/: test_airtable_graphql.py
